Change profile picture and add icon

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Cory Gold's developer portfolio"
     />
+    <link rel="icon" href="./favicon.ico?">
     <title>Cory Gold</title>
   </head>
   <body>
