Add meta tag to remove pinch zoom on mobile

--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Cory Gold's developer portfolio" />
     <meta
-      name="description"
-      content="Cory Gold's developer portfolio"
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-    <link rel="icon" href="./favicon.ico?">
+    <link rel="icon" href="./favicon.ico?" />
     <title>Cory Gold</title>
   </head>
   <body>
