--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Cory Gold's developer portfolio" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Cory Gold's developer portfolio" />
     <link rel="icon" href="./favicon.ico?" />
     <title>Cory Gold</title>
   </head>
